# 3dgs-painter-blender-addon

./: .gitignore  .gitmodules  PROJECT_PLAN.md  README.md  walkthrough.md
docs/: PHASE2_COMPLETE.md  PHASE4_COMPLETE.md  WALL_GAUSSIAN_ROTATION_FIX.md  phase2_dependency_management.md  phase4.1_stroke_pipeline.md  phase4.5_brush_creation.md  phase4_painting_interaction.md  technical_considerations.md
docs/vr_rendering/: OPENXR_LAYER_ARCHITECTURE.md  README.md  VR_DEVELOPMENT_JOURNEY.md  VR_MODULE_ARCHITECTURE.md  VR_SETUP_GUIDE.md
docs/vr_rendering/debug/VRControlProblem/FirstReport/: blender_vr_b_button_solution.md  script.py  script_1.py
docs/vr_rendering/debug/VRControlProblem/SecondReport/: Blender VR Quest 3 B 버튼 바인딩 조사.md
docs/vr_rendering/debug/vrBugReport/FirstReport/: SUMMARY_REPORT.txt  bug_analysis.txt  detailed_fixes.txt
docs/vr_rendering/debug/vrBugReport/SecondReport/: OpenXR Blender VR Coordinate Transformations.md
docs/vr_rendering/research/: 3D Gaussian.md  Blender VR Custom Shader Rendering.md  Blender VR GLSL 렌더링 커스텀 파이프라인 - 종합 기술 리포트.md  Blender VR Gaussian Splatting Rendering.md  VR_CUSTOM_PIPELINE_CONTEXT.md  VR_CUSTOM_PIPELINE_RESEARCH.md  VR_GAUSSIAN_POSITION_FIX.md  VR_RENDERING_RESEARCH_REQUEST.md  VR_TECHNICAL_CONTEXT.md
docs/vr_rendering/vrBugReport/FirstReport/: INDEX.txt  START_HERE.txt  comprehensive_tests.txt
openxr_layer/: CMakeLists.txt  README.md  build_debug.txt  build_fix3d.txt  build_headlock.txt  build_log.txt  build_log2.txt  build_log4.txt  build_log5.txt  build_log6.txt  build_log7.txt  build_log8.txt  build_log9.txt  build_opengl.txt  build_opengl3.txt
openxr_layer/include/: composition_layer.h  gaussian_data.h  gaussian_renderer.h  gpu_context.h  projection_layer.h  shared_memory.h  xr_dispatch.h
openxr_layer/manifest/: gaussian_layer.json
openxr_layer/src/: composition_layer.cpp  gaussian_renderer.cpp  gpu_context.cpp  main.cpp  projection_layer.cpp  shared_memory.cpp  xr_dispatch.cpp
src/: __init__.py  blender_manifest.toml  operators.py  preferences.py  tools.py
src/generator_process/: __init__.py  actor.py  future.py  hybrid_sync.py  optimizer_torch.py  shared_buffer.py
src/npr_core/: __init__.py  brush.py  brush_converter.py  deformation.py  deformation_gpu.py  dependencies.py  gaussian.py  inpainting.py  installer.py  spline.py
src/requirements/: linux_cuda.txt  mac_mps.txt  win_cpu.txt  win_cuda.txt
src/viewport/: gaussian_data.py  panels.py  viewport_renderer.py
src/vr/: __init__.py  action_maps.py  vr_action_binding.py  vr_freehand_paint.py  vr_input.py  vr_operators.py  vr_panels.py  vr_render_engine.py  vr_session.py  vr_shared_memory.py
temp/: Blender VR 커스텀 렌더링 구현 방법 조사.md  Blender VR 커스텀 렌더링 구현 방법.md  Code_Analysis_Final.md  FINAL_RECOMMENDATION.md  VR_Gaussian_Blender_Analysis.md
